# Tethealla

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TetheallaConfig.h  TetheallaConfig.h.in  account_add  login_server  make_key  patch_server  ship.ini  ship_server  welcome.txt
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  ship.ini  tethealla.ini  update-ip.sh
quest/: battle.ini  ep1gov.ini  ep1solo.ini  ep1team.ini  ep2gov.ini  ep2solo.ini  ep2team.ini  ep4gov.ini  ep4solo.ini  ep4team.ini
src/account_add/: CMakeLists.txt  account_add.c
src/char_export/: CMakeLists.txt  char_export.c
src/convert_quest/: CMakeLists.txt  convert_quest.c
src/convert_unitxt/: CMakeLists.txt  convert_unitxt.c  convert_unitxt.c.noprs
src/login_server/: CMakeLists.txt  bbtable.h  login_server.c  pso_crypt.h
src/make_key/: CMakeLists.txt  make_key.c
src/mtwist/: mtwist.c  mtwist.h  randistrs.c  randistrs.h
src/newtable/: CMakeLists.txt  newtable.c
src/patch_server/: CMakeLists.txt  patch_server.c
src/prs/: prs.c
src/ship_server/: CMakeLists.txt  def_block.h  def_map.h  def_packets.h  def_structs.h  def_tables.h  localgms.h  ship_server.c
